# tinyevm

./: Cargo.toml  Makefile  README.md  pyrightconfig.json
example/: C.hex  example.py
src/: lib.rs
